# surveillance-app

./: CMakeLists.txt  CaptureFrames.cpp  README.md  alarm.cpp  capture.hpp  digitizer.cpp  main.cpp  source.hpp  thread.hpp  tracker.cpp  tracker.hpp
include/: source.hpp  twilio.hpp
src/: alarm.cpp  cpp_demo.cpp  digitizer.cpp  main.cpp  tracker.cpp  twilio.cpp
